<resources>
    <string name="app_name">Remote mouse</string>
    <string name="connect_btn_text">Connect</string>
    <string name="ip_and_port_hint">127.0.0.1:5123</string>
    <string name="ip_and_port_validation_error">Invalid format, please type ip:port or ip</string>
    <string name="pc_app_link_hint">Download pc app:\n https://github.com/CatInBeard/remote-mouse</string>
    <string name="connecting">Connecting…</string>
    <string name="connecting_confirmation_required">Please, accept connection on your pc</string>
    <string name="connection_failed">Connection failed!</string>
    <string name="cancel">Cancel</string>
    <string name="left_btn">L</string>
    <string name="right_btn">R</string>
    <string name="double_press_to_exit">Press again to exit</string>
    <string name="settings">Settings</string>
    <string name="accuracy">Accuracy</string>
    <string name="speed">Speed</string>
    <string name="save">Save</string>
</resources>