<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:minWidth="70dp"
            android:id="@+id/accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="start"
            android:text="@string/accuracy" />

        <SeekBar
            android:id="@+id/accuracy_seekbar"
            android:minWidth="150dp"
            app:icon="@drawable/baseline_contactless_24"
            app:iconGravity="textStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_btn_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container">

        <TextView
            android:minWidth="70dp"
            android:id="@+id/speed_seekbar_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="start"
            android:text="@string/speed" />

        <SeekBar
            android:id="@+id/speed_seekbar"
            android:minWidth="150dp"
            android:max="100"
            android:progress="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            app:icon="@drawable/baseline_settings_24"
            app:iconGravity="textStart"
            android:gravity="center"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/container3"
        android:paddingTop="5dp"
        android:max="100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container2">
        <Button
            android:id="@+id/save_settings_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/save"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
