<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/ip_and_port"
            android:minWidth="200dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:inputType="text"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:hint="@string/ip_and_port_hint" />

        <Button
            android:id="@+id/button_connect"
            app:icon="@drawable/baseline_contactless_24"
            app:iconGravity="textStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_btn_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container">

    <Button
        android:minWidth="200dp"
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:icon="@drawable/baseline_settings_24"
        app:iconGravity="textStart"
        android:gravity="center"/>

        <TextView
            android:id="@+id/pc_app_link_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center"
            android:text="@string/pc_app_link_hint" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
